Fixes an IE6 layout issue with the DockPanel example in KitchenSink that caused the south most widget to be clipped by 4px. This also includes very minor cosmetic changes to background color and the overall height of the HorizontalSplitPanel example.
Review by: bobv, scottb



git-svn-id: https://google-web-toolkit.googlecode.com/svn/trunk@1177 8db76d5a-ed1c-0410-87a9-c151d255dfc7

--- a/samples/kitchensink/src/com/google/gwt/sample/kitchensink/public/KitchenSink.css
+++ b/samples/kitchensink/src/com/google/gwt/sample/kitchensink/public/KitchenSink.css
@@ -104,11 +104,12 @@ a:visited {
 
 .gwt-TabPanelBottom {
   background-color: #E8EEF7;
-  border-top: 4px solid #87B3FF;
 }
 
 .gwt-TabBar {
   padding-top: 2px;
+  border-bottom: 4px solid #87B3FF;
+  background-color: #fff;
 }
 
 .gwt-TabBar .gwt-TabBarFirst {
@@ -309,6 +310,10 @@ a:visited {
 .gwt-HorizontalSplitPanel .splitter {
 	background-color: #C3D9FF;
 	cursor: move;
+}
+
+.gwt-HorizontalSplitPanel .left {
+  background-color: #E8EEF7;
 }
 
 .gwt-VerticalSplitPanel {
